# fastapi-ocr-appointments

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: index.html  postman_collection.json
scripts/: demo_run.ps1  publish_to_github.ps1  record_demo.ps1  record_instructions.md  start_ngrok.ps1
src/: main.py
src/api/: appointments.py  clarify.py
src/core/: config.py
src/models/: schemas.py
src/pipelines/: appointment_pipeline.py
src/services/: nlp_service.py  ocr_service.py
src/utils/: parsing.py
src/validators/: appointment_validator.py
tests/: test_api_image.py  test_appointments.py  test_clarify.py  test_integration_ocr.py  test_nlp_relative.py  test_pipeline.py
