[tool.poetry]
name = "fastapi-ocr-appointments"
version = "0.1.0"
description = "An OCR-based NLP appointment scheduling backend service"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pytesseract = "^0.3.8"
easyocr = "^1.4.1"
pydantic = "^1.9.0"
regex = "^2021.11.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"